# MemCache

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MemCache-Swift.podspec  README.md  build.gradle  build_android.sh  build_ios.sh
include/: MemCach_Cpp.hpp  MemCache.hpp  MemCache_C.h
install-ios/MemCache.xcframework/: Info.plist
install-ios/MemCache.xcframework/ios-arm64/Headers/: MemCach_Cpp.hpp  MemCache_C.h
install-ios/MemCache.xcframework/ios-arm64_x86_64-simulator/Headers/: MemCach_Cpp.hpp  MemCache_C.h  optional.hpp
src/: Connect.hpp  MemCache.cpp  MemCache.hpp  MemCache_C.cpp  MemCache_Cpp.cpp  StmtWrapper.hpp  ThreadPool.hpp
src/main/: AndroidManifest.xml
src/main/java/com/yongping/jmemcache/: MemCache.kt
src/main/java/com/yongping/jmetcache/: JniBridge.java
src/main/java/cpp/: MemCacheJni.cpp
src/swift/: MemCache-Swift.swift
tests/: test_main.cpp  test_mem_cache.cpp
